<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:weightSum="1">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:weightSum="30"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="2dip"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="10"
                    android:background="#e4e4e4"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="Report to Public via Email"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/user_details"
                    android:textSize="15dp"/>

                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="2dip"
                    android:layout_marginRight="5dp"
                    android:layout_weight="10"
                    android:background="#e4e4e4"/>
            </LinearLayout>




            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="100"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:background="@drawable/user_icon"/>

                </LinearLayout>

                <EditText
                    android:id="@+id/emailaddress"
                    android:layout_width="0dp"
                    android:padding="10dp"
                    android:layout_weight="95"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_text_selector"
                    android:hint="@string/report_email_address_hint"
                    android:singleLine="true"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_weight="0.23">

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="10"
                android:text="Other Emails :"
                android:textColor="@color/path_blue"
                android:background="#e4e4e4"/>
            </LinearLayout>



            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="100"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:background="@drawable/user_icon"
                        />

                </LinearLayout>

                <EditText
                    android:id="@+id/cc"
                    android:layout_width="0dp"
                    android:layout_weight="95"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/report_cc_hint"
                    android:background="@drawable/edit_text_selector"
                    android:singleLine="true"/>
            </LinearLayout>




            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="100"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:background="@drawable/user_icon"
                        />

                </LinearLayout>

                <EditText
                    android:id="@+id/cc1"
                    android:layout_width="0dp"
                    android:layout_weight="95"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/report_cc_hint"
                    android:background="@drawable/edit_text_selector"
                    android:singleLine="true"/>
            </LinearLayout>




            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="100"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:background="@drawable/user_icon"
                        />

                </LinearLayout>

                <EditText
                    android:id="@+id/cc2"
                    android:layout_width="0dp"
                    android:layout_weight="95"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/report_cc_hint"
                    android:background="@drawable/edit_text_selector"
                    android:singleLine="true"/>
            </LinearLayout>



            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="100"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:background="@drawable/user_icon"
                        />

                </LinearLayout>

                <EditText
                    android:id="@+id/cc3"
                    android:layout_width="0dp"
                    android:layout_weight="95"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/report_cc_hint"
                    android:background="@drawable/edit_text_selector"
                    android:singleLine="true"/>
            </LinearLayout>








            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="100"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Sub"
                        android:textColor="@color/path_blue"/>

                </LinearLayout>

                <EditText
                    android:id="@+id/subject"
                    android:layout_width="0dp"
                    android:layout_weight="95"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/report_subject_hint"
                    android:background="@drawable/edit_text_selector"
                    android:singleLine="true"/>
            </LinearLayout>




            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="100"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="5.5" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Id"
                        android:textColor="@color/path_blue"/>

                </LinearLayout>

                <EditText
                    android:id="@+id/message_id"
                    android:layout_width="0dp"
                    android:layout_weight="92"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/report_doctorid_hint"
                    android:background="@drawable/edit_text_selector"
                    android:singleLine="true"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="100"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:background="@drawable/doctor_icon"
                        />

                </LinearLayout>

                <EditText
                    android:id="@+id/message_name"
                    android:layout_width="0dp"
                    android:layout_weight="95"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/report_doctorname_hint"
                    android:background="@drawable/edit_text_selector"
                    android:singleLine="true"/>
            </LinearLayout>




            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="100"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Message"
                        android:textColor="@color/path_blue"

                        />

                </LinearLayout>

                <EditText
                    android:id="@+id/message_des"
                    android:layout_width="0dp"
                    android:layout_weight="95"
                    android:padding="10dp"
                    android:layout_height="97dp"
                    android:hint="@string/report_aboutyou_hint"
                    android:background="@drawable/edit_text_selector"
                    android:singleLine="true"/>
            </LinearLayout>


            <Button android:id="@+id/btnsendemail"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="20dip"
                android:textSize="16sp"
                android:background="@drawable/search_button_selector"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:text="Send Email" />










        </LinearLayout>
    </ScrollView>

</LinearLayout>